--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-dompdf": "^0.8.7",
+        "doctrine/migrations": "^3.0",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^7.0",
         "kavist/rajaongkir": "^1.1",
