--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.5",
-        "reliese/laravel": "^0.0.19"
+        "reliese/laravel": "^0.0.19",
+        "xethron/migrations-generator": "^2.0"
     },
     "config": {
         "optimize-autoloader": true,
