--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.5",
         "reliese/laravel": "^0.0.19",
+        "sven/artisan-view": "^3.4",
         "xethron/migrations-generator": "^2.0"
     },
     "config": {
